Alignment issues in about section

--- a/style.css
+++ b/style.css
@@ -234,11 +234,11 @@
   margin-bottom: 2rem;
 }
 .lastRow{
-  margin-left: 20%;
+  margin-left: 16%;
 }
 
 .lastRowDes{
-  margin-left: 2%;
+  margin-left: -1%;
 }
 
   /* 
